# cm-async-experiment

guest/: Cargo.toml
guest/src/: lib.rs
guest/wit/: world.wit
host/: Cargo.toml
host/src/: main.rs
