[package]
name = "guest"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.77"
by_address = "1.1.0"
cargo-component-bindings = "0.6.0"
futures = "0.3.30"
once_cell = "1.19.0"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:guest"
adapter = "adapters/b110e57e/wasi_snapshot_preview1.reactor.wasm"

[package.metadata.component.target.dependencies]
"isyswasfa:isyswasfa" = { path = "wit/deps/isyswasfa" }
