[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
async-trait = "0.1.77"
futures = "0.3.30"
once_cell = "1.19.0"
tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros", "process", "fs", "time"] }
wasmtime = { git = "https://github.com/bytecodealliance/wasmtime", features = ["component-model"] }
wasmtime-wasi = { git = "https://github.com/bytecodealliance/wasmtime" }
