[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.79", features = ["backtrace"] }
async-trait = "0.1.77"
futures = "0.3.30"
once_cell = "1.19.0"
tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros", "process", "fs", "time"] }
wasmparser = "0.119.0"
wasmtime = { git = "https://github.com/bytecodealliance/wasmtime", features = ["component-model"] }
wasmtime-wasi = { git = "https://github.com/bytecodealliance/wasmtime" }
